overlays/dev/istio-ingressgateway/gateway-sp.yml
## AUTO GENERATED
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sp-example-com
  namespace: demo
spec:
  selector:
    app: istio-ingressgateway
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/part-of: istio
  servers:
    - port:
        number: 30000
        name: http
        protocol: HTTP
      hosts:
        - sp.localhost.com
